Replace course_dashboard.jpg with course_dashboard.png

--- a/index.html
+++ b/index.html
@@ -1269,7 +1269,7 @@
     <h2>Frontend Designing Work</h2>
     <div class="card-container">
       <div class="card">
-        <img src="course_dashboard.jpg" alt="Placement Material for Fresher" style="width:100%;height:200px;object-fit:cover;display:block;"/>
+        <img src="course_dashboard.png" alt="Placement Material for Fresher" style="width:100%;height:200px;object-fit:cover;display:block;"/>
         <div>
           <h3>PLACEMENT MATERIAL FOR FRESHER</h3>
           <p>Helpful resources for entry level freshers</p>
